# soundmesh-p

soundmesh-core/: README.md  pyproject.toml
soundmesh-core/src/infrastructure/: file_storage_manager.py
soundmesh-core/src/soundmesh_core/: abstractions.py  models.py
soundmesh-core/src/soundmesh_core/infrastructure/: file_storage_manager.py
soundmesh-core/src/soundmesh_server/: app.py  dependencies.py
soundmesh-core/src/soundmesh_server/test_files/: testfile.txt
soundmesh-core/tests/: __init__.py  get_file_test.py  testfile.md
soundmesh-core/utils/: file_storage_manager.py
soundmesh-server/: pyproject.toml
