[project]
name = "soundmesh-core"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "structlog (>=25.4.0,<26.0.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.36.0,<0.37.0)",
    "eyed3 (>=0.9.8,<0.10.0)",
]

[tool.poetry]
packages = [
    {include = "soundmesh_core", from = "src"},
    {include = "soundmesh_server", from = "src"}
    ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]
