[project]
name = "soundmesh-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)"
]


[tool.poetry]
packages = [{include = "soundmesh_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
soundmesh-core = { path = "../soundmesh-core" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
